--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "heroku": "^7.60.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.16"
   },
   "devDependencies": {
