--- a/package.json
+++ b/package.json
@@ -27,12 +27,20 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.4.0",
     "hbs": "^4.2.0",
+    "helmet": "^5.1.0",
     "heroku": "^7.60.2",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.16"
+    "nodemailer": "^6.7.5",
+    "nodemon": "^2.0.16",
+    "util": "^0.12.4",
+    "validator": "^13.7.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "jest": "^28.1.1",
